<resources>
	<string name="app_name">Secure Show</string>

	<string name="processing">Processing</string>
	<string name="frequency">Frequency</string>
	<string name="button_next_continue">Continue</string>

	<string name="error_unknown">Unknown error</string>
	<string name="error_network">Network error</string>
	<string name="error_wrong_parameter">Wrong value in parameter</string>

	<string name="menu_info">Info</string>
	<string name="menu_settings">Settings</string>
	<string name="menu_github">Github</string>
	<string name="menu_logout">Logout</string>

	<string name="login_useremail_hint">Email</string>
	<string name="login_password_hint">Password</string>
	<string name="login_sign_in_rest">Sign-in REST</string>
	<string name="login_sign_in_gql">Sign-in QGL</string>
	<string name="login_multi_confirm">Submit</string>
	<string name="login_multi_input_hint">Your answer</string>
	<string name="login_show_locations">Show bank locations</string>
	<string name="login_follow_github">Follow on Github</string>
	<string name="login_fill_in_test_account">Fill in test account</string>

	<string name="logged_in_info_header">This is secured area.</string>
	<string name="logged_in_info_enrollment">To enroll credentials use Enrollment Section</string>

	<string name="settings_security_label">Security</string>
	<string name="settings_security_empty">No security options available for your device.</string>
	<string name="settings_security_label_android_security">Android security</string>
	<string name="settings_security_tip_android_security">Enable Android Security to use this option.</string>
	<string name="settings_security_link_android_security">Go to Android Security Settings</string>
	<string name="settings_security_store_failed">Store credentails failed unexpctedly!</string>
	<string name="settings_security_explanation_android_security">Enabling security option for current version of Android system (API 4.4.4 KitKat) will force you to enable DEVICE ADMIN RIGHTS for LOCK SCREEN. This step is necessary to keep application secure on old Android system.</string>


	<string name="placeholder_empty">Empty content</string>
	<string name="connectionError">Connection error</string>

	<!-- Override KeystoreCompat default string -->
	<string name="kc_lock_screen_title">SecurityShowcase LockScreen</string>
	<string name="kc_lock_screen_description">Use Android security to open SecurityShowcase</string>

</resources>
