<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">

	<data>
		<variable
			name="viewModel"
			type="cz.koto.misak.securityshowcase.ui.settings.SettingViewModel" />
	</data>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/theme_background"
		android:orientation="vertical">

		<include layout="@layout/toolbar" />

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="@dimen/global_spacing_56"
					android:padding="@dimen/global_spacing_16"
					android:gravity="bottom"
					android:textSize="@dimen/global_text_size_body_1"
					android:textColor="@color/theme_primary"
					android:text="@string/settings_security_label" />


				<FrameLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:minHeight="@dimen/global_spacing_56"
					android:paddingLeft="@dimen/global_spacing_16"
					android:paddingRight="@dimen/global_spacing_16"
					android:background="?attr/selectableItemBackground"
					app:show="@{viewModel.androidSecurityAvailable}">
					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:orientation="vertical">

						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:orientation="horizontal">

							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_gravity="center_vertical"
								android:textAppearance="@style/TextAppearance.SecurityShow.Subhead.Primary"
								android:text="@string/settings_security_label_android_security" />

							<android.support.v7.widget.SwitchCompat
								android:id="@+id/settings_android_security_switch"
								android:layout_width="match_parent"
								android:layout_height="wrap_content"
								android:layout_gravity="center_vertical|right"
								android:checked="@={viewModel.androidSecurityValue}"
								android:onCheckedChanged="@{(switch, checked) -> viewModel.onCheckedChanged(checked)}"
								android:enabled="@{viewModel.androidSecuritySelectable}" />
						</LinearLayout>
						<LinearLayout
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:orientation="vertical"
							app:show="@{!viewModel.androidSecuritySelectable}">
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_gravity="center_vertical"
								android:textAppearance="@style/TextAppearance.SecurityShow.Subhead.Secondary"
								android:text="@string/settings_security_tip_android_security"
								tools:text="Enable Android Security to use this option." />
							<TextView
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"
								android:layout_gravity="center_vertical"
								android:onClick="@{()->viewModel.onClickSecuritySettings()}"
								android:textAppearance="@style/TextAppearance.SecurityShow.Subhead.Link"
								android:text="@string/settings_security_link_android_security"
								tools:text="Go to Android Security Settings" />
						</LinearLayout>
					</LinearLayout>
				</FrameLayout>

				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@drawable/divider_vertical"
					app:show="@{viewModel.androidSecurityAvailable}" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="@dimen/global_spacing_16"
					android:orientation="vertical"
					app:hide="@{viewModel.androidSecurityAvailable}">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="match_parent"
						android:layout_gravity="center_vertical"
						android:textAppearance="@style/TextAppearance.SecurityShow.Subhead.Primary"
						android:text="@string/settings_security_empty"
						tools:text="No security options available for your device." />
				</LinearLayout>

			</LinearLayout>

		</ScrollView>

	</LinearLayout>

</layout>