<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>
		<variable
			name="viewModel"
			type="cz.koto.securityshowcase.ui.login.LoginViewModel" />
	</data>

	<cz.kinst.jakub.view.StatefulLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/theme_primary"
		android:animateLayoutChanges="true"
		app:progressLayout="@layout/include_progress"
		app:state="@{viewModel.stateController.state}">

		<android.support.constraint.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">


			<ImageView
				android:id="@+id/imageView"
				android:layout_width="368dp"
				android:layout_height="200dp"
				android:layout_marginTop="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginLeft="8dp"
				android:alpha='0.04'
				app:srcCompat="@drawable/ic_security_24dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintHorizontal_bias="0.0" />


			<android.support.design.widget.TextInputEditText
				android:id="@+id/email"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginRight="8dp"
				android:layout_marginLeft="8dp"
				android:layout_marginTop="8dp"
				android:hint="@string/login_useremail_hint"
				android:text="@={viewModel.email}"
				app:layout_constraintRight_toRightOf="parent" app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/imageView" />


			<android.support.design.widget.TextInputLayout
				android:id="@+id/passwordContainer"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginTop="8dp"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintTop_toBottomOf="@+id/email"
				app:passwordToggleEnabled="true">

				<EditText
					android:id="@+id/password"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:inputType="textPassword"
					android:hint="@string/login_password_hint"
					android:text="@={viewModel.password}"
					android:maxLines="1"
					android:textSize="14sp" />

			</android.support.design.widget.TextInputLayout>

			<Button
				android:id="@+id/fillTest"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginBottom="141dp"
				android:layout_marginTop="8dp"
				android:gravity="center"
				android:alpha='0.6'
				android:background="@color/theme_accent"
				android:text="@string/login_fill_in_test_account"
				android:onClick="@{()-> viewModel.fillTest()}" app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/passwordContainer" />

			<LinearLayout
				android:id="@+id/linearLayout"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginLeft="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginTop="8dp"
				android:layout_marginBottom="8dp"
				android:minHeight="@dimen/global_spacing_48"
				android:orientation="vertical"
				android:background="@drawable/login_location_background"
				android:foreground="?attr/selectableItemBackground"
				android:paddingLeft="@dimen/global_spacing_16"
				android:paddingRight="@dimen/global_spacing_16" android:paddingTop="@dimen/global_spacing_8"
				android:paddingBottom="@dimen/global_spacing_8"
				android:onClick="@{()->viewModel.followGithub()}"
				app:layout_constraintLeft_toLeftOf="parent"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/fillTest"
				app:layout_constraintBottom_toTopOf="@+id/textView3">

				<android.support.v7.widget.AppCompatImageView
					android:id="@+id/appCompatImageView2"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_gravity="center_vertical"
					android:layout_weight="1"
					android:tint="@color/white"
					app:srcCompat="@drawable/ic_github_simple_black_24dp" />
				<TextView
					android:id="@+id/textView"
					android:layout_width="wrap_content"
					android:layout_height="15dp"
					android:layout_weight="1"
					android:textColor="@color/white"
					android:gravity="center"
					android:textAllCaps="false"
					android:text="@string/login_follow_github"
					/>

			</LinearLayout>
			<TextView
				android:id="@+id/textView2"
				android:layout_width="0dp"
				android:layout_height="69dp"
				android:layout_marginBottom="8dp"
				android:layout_marginRight="8dp"
				android:layout_marginLeft="8dp"
				android:text="@string/login_sign_in_rest"
				android:onClick="@{() -> viewModel.signInRest()}"
				style="@style/BottomConfirmationAppearance"
				app:show="@{viewModel.showSignIn}"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintRight_toLeftOf="@+id/guideline"
				app:layout_constraintLeft_toLeftOf="parent" />
			<TextView
				android:id="@+id/textView3"
				android:layout_width="0dp"
				android:layout_height="69dp"
				android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
				android:layout_marginLeft="8dp"
				android:text="@string/login_sign_in_gql"
				android:onClick="@{() -> viewModel.signInGql()}"
				style="@style/BottomConfirmationAppearance"
				app:show="@{viewModel.showSignIn}"
				app:layout_constraintRight_toRightOf="parent"
				app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="@+id/guideline" />
			<android.support.constraint.Guideline
				android:id="@+id/guideline"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:orientation="vertical" app:layout_constraintGuide_percent="0.5" />

		</android.support.constraint.ConstraintLayout>

	</cz.kinst.jakub.view.StatefulLayout>
</layout>
